# base-ai

./: .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  LICENSE  README.md  generate-instrucctios.md  package.json  setup.md
.github/workflows/: publish-npm.yml
templates/base/: .pre-commit-config.yaml  .release-please-config.json  README.md  package.json  pyproject.toml
templates/base/.cursor/rules/: ai.md
templates/base/.github/: copilot-instructions.md
templates/base/.github/prompts/: README.md  arccchitechture-review.prompt.md  backend-engineer.prompt.md  code-review.prompt.md  create-core-copilot-instrutions.prompt.md  create-granular-copilot-instructions.prompt.md  reactor.prompt.md
templates/base/.github/workflows/: pr-checks.yml  release-please.yml
templates/base/ai/: INSTRUCTIONS.md  PROMPTS.md  SKILLS.md  TOOLS.md
templates/base/scripts/: sync-ai-instructions.mjs
templates/base/src/domains/: __init__.py
templates/base/src/domains/memory/: __init__.py
templates/base/src/domains/storage/: __init__.py
