[project]
name = "base-project"
version = "0.1.0"
description = "Base project scaffold (Python + shared AI instructions)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "pydantic-ai>=0.0.0",
  "langgraph>=0.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.0",
  "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
